--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <div id="activities" class="container">
         <h2>Hobbies & Interests</h2>
         <div class="hobbies-container">
-            <a href="https://example.com/fitness" class="hobby-box" style="background-image: url('gym.png');" target="_blank">
+            <a href="fitness.html" class="hobby-box" style="background-image: url('gym.png');" target="_blank">
                 <p>Fitness</p>
             </a>
             <a href="https://example.com/cooking" class="hobby-box" style="background-image: url('cooking.jpeg');" target="_blank">
