--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <a href="fitness.html" class="hobby-box" style="background-image: url('gym.png');" target="_blank">
                 <p>Fitness</p>
             </a>
-            <a href="https://example.com/cooking" class="hobby-box" style="background-image: url('cooking.jpeg');" target="_blank">
+            <a href="cooking.html" class="hobby-box" style="background-image: url('cooking.jpeg');" target="_blank">
                 <p>Cooking</p>
             </a>
             <a href="https://example.com/reading" class="hobby-box" style="background-image: url('reading.jpeg');" target="_blank">
