--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <a href="cooking.html" class="hobby-box" style="background-image: url('cooking.jpeg');" target="_blank">
                 <p>Cooking</p>
             </a>
-            <a href="https://example.com/reading" class="hobby-box" style="background-image: url('reading.jpeg');" target="_blank">
+            <a href="reading.html" class="hobby-box" style="background-image: url('reading.jpeg');" target="_blank">
                 <p>Reading</p>
             </a>
             <a href="https://example.com/politics" class="hobby-box" style="background-image: url('politics.jpeg');" target="_blank">
