--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
             <a href="reading.html" class="hobby-box" style="background-image: url('reading.jpeg');" target="_blank">
                 <p>Reading</p>
             </a>
-            <a href="https://example.com/politics" class="hobby-box" style="background-image: url('politics.jpeg');" target="_blank">
+            <a href="politics.html" class="hobby-box" style="background-image: url('politics.jpeg');" target="_blank">
                 <p>Politics</p>
             </a>
             <a href="https://example.com/current-affairs" class="hobby-box" style="background-image: url('current.jpeg');" target="_blank">
