--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <a href="politics.html" class="hobby-box" style="background-image: url('politics.jpeg');" target="_blank">
                 <p>Politics</p>
             </a>
-            <a href="https://example.com/current-affairs" class="hobby-box" style="background-image: url('current.jpeg');" target="_blank">
+            <a href="current.html" class="hobby-box" style="background-image: url('current.jpeg');" target="_blank">
                 <p>Current Affairs</p>
             </a>
             <a href="https://example.com/travel" class="hobby-box" style="background-image: url('travel.jpeg');" target="_blank">
