--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
             <a href="current.html" class="hobby-box" style="background-image: url('current.jpeg');" target="_blank">
                 <p>Current Affairs</p>
             </a>
-            <a href="https://example.com/travel" class="hobby-box" style="background-image: url('travel.jpeg');" target="_blank">
+            <a href="travel.html" class="hobby-box" style="background-image: url('travel.jpeg');" target="_blank">
                 <p>Travel</p>
             </a>
         </div>
