--- a/fitness.html
+++ b/fitness.html
@@ -49,6 +49,23 @@
             color: #333;
         }
 
+        .sports, .activities {
+            text-align: left;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .sport, .activity {
+            background-color: #fff;
+            margin: 20px 0;
+            padding: 20px;
+            border-left: 5px solid #007BFF;
+        }
+
+        .sport h3, .activity h3 {
+            margin-top: 0;
+        }
+
         footer {
             background-color: #333;
             color: #fff;
@@ -68,7 +85,55 @@
     <div class="container">
         <h2>This is my fitness page</h2>
         <p>Here, you will find some information about my fitness lifestyle.</p>
-        <p>Fitness has always been a crucial part of my life. It helps me stay healthy, energized, and focused. I enjoy various forms of exercise, from weightlifting to cardio, and I am always eager to try new fitness activities.</p>
+        <p>Fitness has always been a crucial part of my life. It helps me stay healthy, energized, and focused. I have tried various sports and enjoy different activities.</p>
+        
+        <div class="sports">
+            <h2>Sports I Have Tried</h2>
+            <div class="sport">
+                <h3>Swimming</h3>
+                <p>Enjoyed swimming for its full-body workout and the refreshing feeling of being in water.</p>
+            </div>
+            <div class="sport">
+                <h3>Football</h3>
+                <p>Played football in local clubs and enjoyed the teamwork and strategy involved in the game.</p>
+            </div>
+            <div class="sport">
+                <h3>Handball</h3>
+                <p>Participated in handball, appreciating the fast-paced and dynamic nature of the sport.</p>
+            </div>
+            <div class="sport">
+                <h3>Tennis</h3>
+                <p>Played tennis recreationally, enjoying the challenge and precision required in the sport.</p>
+            </div>
+            <div class="sport">
+                <h3>MMA</h3>
+                <p>Practiced Mixed Martial Arts, which helped improve my physical fitness and self-defense skills.</p>
+            </div>
+            <div class="sport">
+                <h3>Gym</h3>
+                <p>Currently focusing on gym workouts, which include strength training and cardio exercises.</p>
+            </div>
+        </div>
+
+        <div class="activities">
+            <h2>Activities I Enjoy</h2>
+            <div class="activity">
+                <h3>Skiing</h3>
+                <p>Enjoy the thrill of skiing down snowy slopes and the beautiful winter landscapes.</p>
+            </div>
+            <div class="activity">
+                <h3>Snowboarding</h3>
+                <p>Love the adrenaline rush and skill involved in snowboarding.</p>
+            </div>
+            <div class="activity">
+                <h3>Cycling</h3>
+                <p>Enjoy long cycling trips, exploring new areas, and the health benefits of cycling.</p>
+            </div>
+            <div class="activity">
+                <h3>Volleyball</h3>
+                <p>Play volleyball with friends, appreciating the teamwork and fun of the game.</p>
+            </div>
+        </div>
     </div>
     <footer>
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
