--- a/cooking.html
+++ b/cooking.html
@@ -87,16 +87,49 @@
         <p>Here you will find some of my recipes that I like to cook.</p>
         <div class="recipes">
             <div class="recipe">
-                <h3>Recipe 1: Spaghetti Carbonara</h3>
-                <p>A classic Italian pasta dish made with eggs, cheese, pancetta, and pepper. It's simple yet delicious.</p>
+                <h3>Burrito Salad</h3>
+                <p>Ingredients: Hackfleisch, Salat, Avocado, Paprika, Rote Zwiebel, Reis, Joghurt, Lime, Onion Powder, Paprika Powder</p>
             </div>
             <div class="recipe">
-                <h3>Recipe 2: Chicken Curry</h3>
-                <p>A flavorful and spicy chicken curry made with a blend of aromatic spices and coconut milk.</p>
+                <h3>Bagel</h3>
+                <p>Ingredients: Avo, Bagel, Ei, Hüttenkäse</p>
             </div>
             <div class="recipe">
-                <h3>Recipe 3: Chocolate Cake</h3>
-                <p>A rich and moist chocolate cake perfect for any celebration. Made with cocoa powder and topped with a creamy chocolate ganache.</p>
+                <h3>Chicken Wrap</h3>
+                <p>Ingredients: Chicken Geschnetzeltes, Wrap, Yaos Joghurt, Avocado, Zitrone, Reis, Hüttenkäse</p>
+            </div>
+            <div class="recipe">
+                <h3>Bauerntopf</h3>
+                <p>Ingredients: Hackfleisch, Tomatensauce, Tomatenpüree, Kartoffel, Paprika, Carrots, Garlic, Crème Fraîche, Gemüsebrühe</p>
+            </div>
+            <div class="recipe">
+                <h3>Caesar Salad</h3>
+                <p>Ingredients: Chicken Breast, Boiled Egg, Lettuce, Tomato, Red Onion, Yoghurt Sauce</p>
+            </div>
+            <div class="recipe">
+                <h3>Chili con Carne</h3>
+                <p>Ingredients: Hackfleisch, Potatoes, Kidney Beans, Mais, Zwiebel, Knoblauch, Gehackte Tomate Dosen</p>
+            </div>
+            <div class="recipe">
+                <h3>Pasta Bolognese</h3>
+                <p>Ingredients: Pasta, Hackfleisch, Tomatensauce, Garlic, Zwiebel, Carrots, Kräuter</p>
+            </div>
+            <div class="recipe">
+                <h3>Pasta Carbonara</h3>
+                <p>Ingredients: Parmesan, Ei, Pasta-Wasser, Pasta, Pfeffer, Salz</p>
+            </div>
+            <div class="recipe">
+                <h3>Fajitas</h3>
+                <p>Ingredients: Guacamole, Hackfleisch/Chicken, Paprika, Zwiebel, Salat, Reis, Mais, Tomaten, Gurke, Crème Fraîche, Coop Salsa</p>
+            </div>
+            <div class="recipe">
+                <h3>Salmon Pasta</h3>
+                <p>Ingredients: Geräucherte Lachs, Cherry Tomaten, Spinat, Garlic, Lemon Zest, Lemon Juice, Halbrahm, Pasta, Maizena</p>
+            </div>
+            <div class="recipe">
+                <h3>Home Made Pizza</h3>
+                <p>For dough: Wasser, Hefe, Mehl, Olivenöl, Salz, Prise Zucker<br>
+                For toppings: Tomatensauce, Mozzarella, etc.</p>
             </div>
         </div>
     </div>
