--- a/politics.html
+++ b/politics.html
@@ -83,24 +83,36 @@
         <h1>Politics</h1>
     </header>
     <div class="container">
-        <h2>Welcome to my politics side</h2>
-        <p>Here you will find some information about my interests and insights in the field of politics.</p>
+        <h2>Welcome to my politics page</h2>
+        <p>Not only am I deeply interested in politics, but I also study it extensively. I have a keen interest and substantial knowledge in conflict and security, comparative politics, international relations, European Union integration, climate change and environmental policy, governance, and public policy.</p>
         <div class="topics">
             <div class="topic">
-                <h3>Political Theory</h3>
-                <p>Exploring the fundamental ideas and principles that underpin political systems and thought, including democracy, justice, and liberty.</p>
+                <h3>Conflict and Security</h3>
+                <p>Understanding the dynamics of conflicts and the measures required for security, including both national and international perspectives.</p>
+            </div>
+            <div class="topic">
+                <h3>Comparative Politics</h3>
+                <p>Comparing political systems, institutions, and practices across different countries to understand the diversity and commonality in political life.</p>
             </div>
             <div class="topic">
                 <h3>International Relations</h3>
                 <p>Understanding the relationships between countries, the role of international organizations, and the impact of global events on local and international politics.</p>
             </div>
             <div class="topic">
-                <h3>Public Policy</h3>
-                <p>Analyzing the creation and implementation of public policies, and their effects on society and various population groups.</p>
+                <h3>European Union Integration</h3>
+                <p>Studying the process and impact of European Union integration on member states and the broader international community.</p>
             </div>
             <div class="topic">
-                <h3>Comparative Politics</h3>
-                <p>Comparing political systems, institutions, and practices across different countries to understand the diversity and commonality in political life.</p>
+                <h3>Climate Change and Environmental Policy</h3>
+                <p>Analyzing the political responses to climate change and the development and implementation of environmental policies.</p>
+            </div>
+            <div class="topic">
+                <h3>Governance</h3>
+                <p>Examining how various forms of governance impact political stability, efficiency, and public trust in political institutions.</p>
+            </div>
+            <div class="topic">
+                <h3>Public Policy</h3>
+                <p>Analyzing the creation and implementation of public policies, and their effects on society and various population groups.</p>
             </div>
         </div>
     </div>
