--- a/current.html
+++ b/current.html
@@ -88,28 +88,28 @@
         <h1>Current Affairs</h1>
     </header>
     <div class="container">
-        <h2>Welcome to my current affairs side</h2>
+        <h2>Welcome to my current affairs page</h2>
         <p>Here you will find information and my thoughts on recent events and significant developments happening around the world.</p>
         <div class="topics">
             <div class="topic">
                 <h3>Climate Change and Environment</h3>
                 <p>Exploring the latest news and developments on climate change, environmental policies, and global efforts to address environmental challenges.</p>
-                <p><a href="https://www.example.com/article-on-climate-change" target="_blank">Read more about recent climate change news</a></p>
+                <p><a href="https://www.meteoswiss.admin.ch/climate/climate-change.html" target="_blank">Read more about recent climate change news</a></p>
             </div>
             <div class="topic">
                 <h3>Global Health</h3>
                 <p>Discussing the impact of recent health crises, advancements in medical research, and global health policies.</p>
-                <p><a href="https://www.example.com/article-on-global-health" target="_blank">Read more about recent health news</a></p>
+                <p><a href="https://globalhealthnow.org" target="_blank">Read more about recent health news</a></p>
             </div>
             <div class="topic">
                 <h3>Political Developments</h3>
                 <p>Analyzing recent political events, elections, and policy changes across different countries.</p>
-                <p><a href="https://www.example.com/article-on-political-developments" target="_blank">Read more about recent political news</a></p>
+                <p><a href="https://economictimes.indiatimes.com/topic/world-politics" target="_blank">Read more about recent political news</a></p>
             </div>
             <div class="topic">
                 <h3>Technological Advancements</h3>
                 <p>Covering the latest trends and breakthroughs in technology, including AI, cybersecurity, and space exploration.</p>
-                <p><a href="https://www.example.com/article-on-tech-advancements" target="_blank">Read more about recent technology news</a></p>
+                <p><a href="https://www.technologyreview.com" target="_blank">Read more about recent technology news</a></p>
             </div>
         </div>
     </div>
