--- a/reading.html
+++ b/reading.html
@@ -83,7 +83,7 @@
         <h1>Reading</h1>
     </header>
     <div class="container">
-        <h2>Welcome to my reading side</h2>
+        <h2>Welcome to my reading page</h2>
         <p>Here you will find some of my favorite books that I loved to read.</p>
         <div class="books">
             <div class="book">
