--- a/travel.html
+++ b/travel.html
@@ -83,11 +83,11 @@
         <h1>Travel</h1>
     </header>
     <div class="container">
-        <h2>Welcome to my travel side</h2>
+        <h2>Welcome to my travel page</h2>
         <p>Here you will find some highlights and memorable experiences from the countries I have visited.</p>
         <div class="countries">
             <div class="country">
-                <h3>America</h3>
+                <h3>North America</h3>
                 <p>Explored the vibrant cities of New York and Los Angeles, enjoyed the natural beauty of the Grand Canyon, and experienced the cultural diversity across different states.</p>
             </div>
             <div class="country">
@@ -108,7 +108,7 @@
             </div>
             <div class="country">
                 <h3>Denmark</h3>
-                <p>Explored the historic streets of Copenhagen, visited the famous Tivoli Gardens, and enjoyed the Danish hygge culture.</p>
+                <p>Explored the historic streets of Copenhagen, visited the famous Tivoli Gardens, and enjoyed the Danish "hygge" culture.</p>
             </div>
             <div class="country">
                 <h3>Germany</h3>
@@ -128,11 +128,11 @@
             </div>
             <div class="country">
                 <h3>Spain</h3>
-                <p>Experienced the lively culture of Barcelona, the historic sites of Madrid, and the beautiful city of san sebastian.</p>
+                <p>Experienced the lively culture of Barcelona, the historic sites of Madrid, and the beautiful city of San Sebastian.</p>
             </div>
             <div class="country">
                 <h3>Italy</h3>
-                <p>Explored the ancient ruins of Rome, enjoyed the vibrant city of milano.</p>
+                <p>Explored the ancient ruins of Rome, enjoyed the vibrant city of Milano.</p>
             </div>
             <div class="country">
                 <h3>Hungary</h3>
