--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         header {
             background-color: #007BFF;
             color: #fff;
-            padding: 100px 20px;
+            padding: 200px 20px;
             text-align: center;
-            background-image: url('thinkpolitics.jpeg');
+            background-image: url('worldpolitics.png');
             background-size: cover;
             background-position: center;
             position: relative;
