--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             color: #fff;
             padding: 200px 20px;
             text-align: center;
-            background-image: url('worldpolitics.png');
+            background-image: url('globe.tiff');
             background-size: cover;
             background-position: center;
             position: relative;
