--- a/fitness.html
+++ b/fitness.html
@@ -18,9 +18,9 @@
         header {
             background-color: #007BFF;
             color: #fff;
-            padding: 150px 20px;
+            padding: 200px 20px;
             text-align: center;
-            background-image: url('gym.png'); /* Replace with your actual image path */
+            background-image: url('sports.tiff'); 
             background-size: cover;
             background-position: center;
             position: relative;
