--- a/travel.html
+++ b/travel.html
@@ -18,9 +18,9 @@
         header {
             background-color: #007BFF;
             color: #fff;
-            padding: 150px 20px;
+            padding: 200px 20px;
             text-align: center;
-            background-image: url('travel.jpeg'); /* Replace with your actual image path */
+            background-image: url('travel.tiff'); /* Replace with your actual image path */
             background-size: cover;
             background-position: center;
             position: relative;
