--- a/fitness.html
+++ b/fitness.html
@@ -29,7 +29,7 @@
         header h1 {
             font-size: 2.5em;
             margin: 0;
-            color: #000;
+            color: #fff;;
         }
 
         .container {
