--- a/fitness.html
+++ b/fitness.html
@@ -15,6 +15,17 @@
             color: #333;
         }
 
+        header {
+            background-color: #007BFF;
+            color: #fff;
+            padding: 200px 20px;
+            text-align: center;
+            background-image: url('sports.tiff'); 
+            background-size: cover;
+            background-position: center;
+            position: relative;
+        }
+
         .container {
             padding: 40px 20px;
             text-align: center;
@@ -62,6 +73,7 @@
 </head>
 
 <body>
+    <header></header>
     <div class="container">
         <h2>This is my fitness page</h2>
         <p>Here, you will find some information about my fitness lifestyle.</p>
