--- a/current.html
+++ b/current.html
@@ -20,7 +20,7 @@
             color: #fff;
             padding: 60px 20px;
             text-align: center;
-            background-image: url('current.jpeg'); /* Replace with your actual image path */
+            background-image: url('currentaffairs.tiff'); /* Replace with your actual image path */
             background-size: cover;
             background-position: center;
             position: relative;
