--- a/fitness.html
+++ b/fitness.html
@@ -20,7 +20,7 @@
             color: #fff;
             padding: 200px 20px;
             text-align: center;
-            background-image: url('sports.tiff'); 
+            background-image: url('sport.jpeg'); 
             background-size: cover;
             background-position: center;
             position: relative;
