--- a/reading.html
+++ b/reading.html
@@ -20,7 +20,7 @@
             color: #fff;
             padding: 60px 20px;
             text-align: center;
-            background-image: url('reading.jpeg'); /* Replace with your actual image path */
+            background-image: url('books.jpeg'); 
             background-size: cover;
             background-position: center;
             position: relative;
