--- a/reading.html
+++ b/reading.html
@@ -99,7 +99,7 @@
                 <p>A high-fantasy series that follows the journey of a young dragon rider and his quest to defeat an evil king.</p>
             </div>
             <div class="book">
-                <h3>Richard Schwartz - Die Getter Kriege Saga</h3>
+                <h3>Richard Schwartz - Die Götter Kriege Saga</h3>
                 <p>An exciting series filled with adventure, magic, and intriguing characters.</p>
             </div>
         </div>
