--- a/politics.html
+++ b/politics.html
@@ -20,7 +20,7 @@
             color: #fff;
             padding: 60px 20px;
             text-align: center;
-            background-image: url('politics.jpeg'); /* Replace with your actual image path */
+            background-image: url('politicalscience.jpeg'); 
             background-size: cover;
             background-position: center;
             position: relative;
