--- a/politics.html
+++ b/politics.html
@@ -22,14 +22,8 @@
             text-align: center;
             background-image: url('politicalscience.jpeg'); 
             background-size: cover;
-            background-position: center;
+            background-position: center center; /* Adjusted to better center the image */
             position: relative;
-        }
-
-        header h1 {
-            font-size: 2.5em;
-            margin: 0;
-            color: #000;
         }
 
         .container {
@@ -80,7 +74,7 @@
 
 <body>
     <header>
-        <h1>Politics</h1>
+        <!-- Title removed -->
     </header>
     <div class="container">
         <h2>Welcome to my politics page</h2>
