--- a/politics.html
+++ b/politics.html
@@ -22,7 +22,7 @@
             text-align: center;
             background-image: url('politicalscience.jpeg'); 
             background-size: cover;
-            background-position: center center; /* Adjusted to better center the image */
+            background-position: center top; /* Adjusted to focus on the upper part of the image */
             position: relative;
         }
 
