--- a/politics.html
+++ b/politics.html
@@ -21,8 +21,9 @@
             padding: 200px 20px;
             text-align: center;
             background-image: url('politicalscience.jpeg'); 
-            background-size: cover;
-            background-position: center top; /* Adjusted to focus on the upper part of the image */
+            background-size: contain; /* Changed from cover to contain */
+            background-repeat: no-repeat; /* Added to avoid repeating the image */
+            background-position: center center; /* Adjusted to better center the image */
             position: relative;
         }
 
