--- a/reading.html
+++ b/reading.html
@@ -102,6 +102,22 @@
                 <h3>Richard Schwartz - Die Götter Kriege Saga</h3>
                 <p>An exciting series filled with adventure, magic, and intriguing characters.</p>
             </div>
+            <div class="book">
+                <h3>J.K. Rowling - Harry Potter Series</h3>
+                <p>A beloved fantasy series that chronicles the life and adventures of a young wizard, Harry Potter, and his fight against the dark wizard Voldemort.</p>
+            </div>
+            <div class="book">
+                <h3>Christina Henry - The Chronicles of Alice Series</h3>
+                <p>A dark and twisted retelling of the classic Alice in Wonderland story, filled with adventure and suspense.</p>
+            </div>
+            <div class="book">
+                <h3>J.R.R. Tolkien - The Hobbit</h3>
+                <p>A timeless fantasy tale about the journey of Bilbo Baggins, who embarks on an adventure to help a group of dwarves reclaim their homeland.</p>
+            </div>
+            <div class="book">
+                <h3>John Flanagan - Die Chroniken von Araluen</h3>
+                <p>An engaging series that follows the adventures of an apprentice Ranger named Will, set in a richly detailed medieval world.</p>
+            </div>
         </div>
     </div>
     <footer>
