--- a/travel.html
+++ b/travel.html
@@ -20,7 +20,7 @@
             color: #fff;
             padding: 200px 20px;
             text-align: center;
-            background-image: url('travel.tiff'); /* Replace with your actual image path */
+            background-image: url('travel.jpg'); /* Replace with your actual image path */
             background-size: cover;
             background-position: center;
             position: relative;
@@ -128,7 +128,7 @@
             </div>
             <div class="country">
                 <h3>Spain</h3>
-                <p>Experienced the lively culture of Barcelona, the historic sites of Madrid, and the beautiful city of San Sebastian.</p>
+                <p>Experienced the lively culture of Barcelona, the historic sites of Madrid, and the beautiful beaches and cities of Mallorca, Ibiza, San Sebastián, and Valencia.</p>
             </div>
             <div class="country">
                 <h3>Italy</h3>
@@ -149,6 +149,10 @@
             <div class="country">
                 <h3>Iceland</h3>
                 <p>Marveled at the stunning waterfalls and geysers, soaked in the Blue Lagoon, and experienced the unique landscapes of this beautiful island.</p>
+            </div>
+            <div class="country">
+                <h3>England</h3>
+                <p>Visited the historic and vibrant cities of London and Reading.</p>
             </div>
         </div>
     </div>
