--- a/travel.html
+++ b/travel.html
@@ -20,7 +20,7 @@
             color: #fff;
             padding: 200px 20px;
             text-align: center;
-            background-image: url('travel.jpg'); /* Replace with your actual image path */
+            background-image: url('travel.tiff'); /* Replace with your actual image path */
             background-size: cover;
             background-position: center;
             position: relative;
