--- a/index.html
+++ b/index.html
@@ -152,8 +152,11 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             background-size: cover;
             background-position: center;
-            background-color: #f4f4f4;
+            background-color: #e0e0e0;
             position: relative;
+            display: flex;
+            align-items: flex-end;
+            height: 200px;
         }
 
         .hobby-box p {
@@ -162,8 +165,6 @@
             font-size: 1.2em;
             color: #fff;
             background-color: rgba(0, 0, 0, 0.5);
-            position: absolute;
-            bottom: 0;
             width: 100%;
             box-sizing: border-box;
         }
@@ -202,6 +203,11 @@
             .container p,
             .container ul {
                 font-size: 1em;
+            }
+
+            .hobby-box {
+                width: 100%;
+                height: 150px;
             }
         }
     </style>
